--- a/build.gradle
+++ b/build.gradle
@@ -43,9 +43,9 @@ if (useMirror) apply from: "mirror.gradle"
 apply plugin: "net.minecraftforge.gradle.forge"
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
-version = "1.0"
-group = "com.ideallandframework.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+version = "0.1.0"
+group = "com.deeplake.adven_one" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "adven_one"
 
 sourceCompatibility = targetCompatibility = "1.8" // Need this here so eclipse task generates correctly.
 compileJava {
